[tool.poetry]
name = "electrode"
version = "0.1.0"
description = "A powerfull audio game engine written in python."
authors = ["blindelectron <jump.leper@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
cyal = "^0.3.2"
pybullet = "^3.2.5"
numpy = "^1.26.2"
webcolors = "^1.13"
accessible-output2 = "^0.17"
wxpython = "^4.2.1"
soundfile = "^0.12.1"
pyttsx4 = "^3.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
